# carlet_scraper

./: .env  Dockerfile  alembic.ini  carlet_api.py  main.py  pyproject.toml  script_auto_data.py  script_auto_data_processing.py  script_autofile.py  script_automobiledimension.py  script_automobiledimension_ocr.py  script_carlet_csv.py  script_paintscratch.py  script_yahoo.py  tire_rack.js  tire_rack.py  tire_rack_api.py
api/: __init__.py
api/carlet_v1/: __init__.py
bash/: entrypoint.sh
db/: __init__.py
db/auto_data/: __init__.py  car.py
db/autofiles/: __init__.py  car.py
db/automobiledimension/: __init__.py  car.py
db/liqui_moly/: __init__.py  car.py  make.py
db/local_carlet/: __init__.py  models.py  models_no_use.py
db/paintscratch/: __init__.py  car.py
db/tire_rack/: __init__.py  car.py
lib/: __init__.py
lib/helper/: __init__.py  auth_helper.py  token_helper.py
lib/utils/: __init__.py
migrations/: env.py
migrations/migrations_auto_data/: env.py
migrations/migrations_automobiledimension/: env.py
migrations/migrations_paintscratch/: env.py
migrations/migrations_tire_rack/: env.py
migrations/versions/: 8591428dcdc9_create_a_baseline_migrations.py
migrations_auto_data/versions/: 053dd722477c_update.py  4f845bfd63b2_update.py  82f7f2c17da4_update.py  f2e04d2207ca_update.py
migrations_autofiles/: env.py
migrations_automobiledimension/versions/: bd8ac0bc8304_update.py
migrations_liqui_moly/versions/: 5b1ed94434a9_update.py  (+4 more)
migrations_local_carlet/: env.py
note/: alembic.md
scraper_scripts/: script_auto_data.py  script_liqui_moly.py  script_yahoo_mapping.py  tire_rack.js  tire_rack.py  upload_standard_maintainance.py  upload_tire_products.py
spread_sheets/: The Reset Auto小保養(引擎).xlsx  The Reset Auto小保養(機油).xlsx  tires.xlsx
sql/: tire_rack.sql
(+29 files in other folders)
